Simplify scene cycling for button 4
- Change from scene_cycle to scene_next for simpler behavior
- This will cycle through scenes: nightlight → relax → energize
- Removes complex state tracking that was causing issues

--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -236,7 +236,7 @@ data:
         button_2_brightness_up: true
         button_3_brightness_down: true
         button_4_custom: true
-        button_4_action: scene_cycle
+        button_4_action: scene_next
         scene_entities:
           - scene.living_room_nightlight
           - scene.living_room_relax
