--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -547,7 +547,7 @@ data:
                     sequence:
                       - service: scene.turn_on
                         target:
-                          entity_id: "{{ scene_entities[0] if scene_entities else '' }}"
+                          entity_id: "{{ scene_entities[1] if scene_entities|length > 1 else scene_entities[0] if scene_entities else '' }}"
                   
                   # Scene previous
                   - conditions:
@@ -556,7 +556,7 @@ data:
                     sequence:
                       - service: scene.turn_on
                         target:
-                          entity_id: "{{ scene_entities[0] if scene_entities else '' }}"
+                          entity_id: "{{ scene_entities[2] if scene_entities|length > 2 else scene_entities[0] if scene_entities else '' }}"
                   
                   # Color cycle
                   - conditions:
