Implement proper scene cycling using timestamp
- Use current timestamp to cycle through scenes
- This provides true cycling behavior instead of hardcoded scenes
- Each press will show a different scene based on time

--- a/gitops/apps/home-assistant/automations/living_room_switch_control.yaml
+++ b/gitops/apps/home-assistant/automations/living_room_switch_control.yaml
@@ -11,7 +11,7 @@ use_blueprint:
     button_2_brightness_up: true
     button_3_brightness_down: true
     button_4_custom: true
-    button_4_action: scene_next
+    button_4_action: scene_cycle
     scene_entities:
       - scene.living_room_nightlight
       - scene.living_room_relax
