--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -15,6 +15,7 @@ spec:
       labels:
         app: homeassistant
     spec:
+      hostNetwork: true
       initContainers:
         - name: install-hacs
           image: alpine:3.20
