--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -470,7 +470,7 @@ data:
           # Button 1: Long press action
           - conditions:
               - condition: template
-                value_template: "{{ trigger.event.data.type == 'long_release' and trigger.event.data.subtype == 1 }}"
+                value_template: "{{ trigger.event.data.type == 'long_press' and trigger.event.data.subtype == 1 }}"
               - condition: template
                 value_template: "{{ button_1_long_press }}"
             sequence:
@@ -588,7 +588,7 @@ data:
           # Button 4: Long press action
           - conditions:
               - condition: template
-                value_template: "{{ trigger.event.data.type == 'long_release' and trigger.event.data.subtype == 4 }}"
+                value_template: "{{ trigger.event.data.type == 'long_press' and trigger.event.data.subtype == 4 }}"
               - condition: template
                 value_template: "{{ button_4_long_press }}"
             sequence:
