Fix all lights off service call
- Change from entity_id: all to domain: light
- This should properly turn off all lights in the domain
- Fixes the long press button 1 all lights off action

--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -239,7 +239,7 @@ action:
                 sequence:
                   - service: light.turn_off
                     target:
-                      entity_id: all
+                      domain: light
               - conditions:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
