Fix all lights off service call using homeassistant.turn_off
- Use homeassistant.turn_off with domain: light instead of light.turn_off
- This is the correct way to turn off all lights in Home Assistant
- Fixes the automation setup error

--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -479,7 +479,7 @@ data:
                       - condition: template
                         value_template: "{{ button_1_long_action == 'all_lights_off' }}"
                     sequence:
-                      - service: light.turn_off
+                      - service: homeassistant.turn_off
                         target:
                           domain: light
                   - conditions:
