--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -237,7 +237,7 @@ action:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'all_lights_off' }}"
                 sequence:
-                  - service: light.turn_off
+                  - service: homeassistant.turn_off
                     target:
                       domain: light
               - conditions:
