Revert to working light.turn_off with entity_id: all
- Restore the working version that was functioning before
- Use light.turn_off with target entity_id: all
- This should work correctly for turning off all lights

--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -479,7 +479,9 @@ data:
                       - condition: template
                         value_template: "{{ button_1_long_action == 'all_lights_off' }}"
                     sequence:
-                      - service: homeassistant.turn_off
+                      - service: light.turn_off
+                        target:
+                          entity_id: all
                   - conditions:
                       - condition: template
                         value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
