--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -228,7 +228,7 @@ action:
       # Button 1: Long press action
       - conditions:
           - condition: template
-            value_template: "{{ trigger.event.data.type == 'long_press' and trigger.event.data.subtype == 1 }}"
+            value_template: "{{ trigger.event.data.type == 'long_release' and trigger.event.data.subtype == 1 }}"
           - condition: template
             value_template: "{{ button_1_long_press }}"
         sequence:
