--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -470,7 +470,7 @@ data:
           # Button 1: Long press action
           - conditions:
               - condition: template
-                value_template: "{{ trigger.event.data.type == 'long_press' and trigger.event.data.subtype == 1 }}"
+                value_template: "{{ trigger.event.data.type == 'long_release' and trigger.event.data.subtype == 1 }}"
               - condition: template
                 value_template: "{{ button_1_long_press }}"
             sequence:
@@ -479,9 +479,7 @@ data:
                       - condition: template
                         value_template: "{{ button_1_long_action == 'all_lights_off' }}"
                     sequence:
-                      - service: light.turn_off
-                        target:
-                          entity_id: all
+                      - service: homeassistant.turn_off
                   - conditions:
                       - condition: template
                         value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
