--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -237,9 +237,7 @@ action:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'all_lights_off' }}"
                 sequence:
-                  - service: light.turn_off
-                    target:
-                      entity_id: all
+                  - service: homeassistant.turn_off
               - conditions:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
