--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -237,7 +237,11 @@ action:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'all_lights_off' }}"
                 sequence:
-                  - service: homeassistant.turn_off
+                  - service: light.turn_off
+                    target:
+                      entity_id: >
+                        {% set all_lights = states.light | map(attribute='entity_id') | list %}
+                        {{ all_lights }}
               - conditions:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
