Use domain: light for turning off all lights
- Use light.turn_off with domain: light to target all light entities
- This is the correct way to turn off all lights in Home Assistant
- More efficient than listing individual entities

--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -239,9 +239,7 @@ action:
                 sequence:
                   - service: light.turn_off
                     target:
-                      entity_id: >
-                        {% set all_lights = states.light | map(attribute='entity_id') | list %}
-                        {{ all_lights }}
+                      domain: light
               - conditions:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
