--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -481,9 +481,7 @@ data:
                     sequence:
                       - service: light.turn_off
                         target:
-                          entity_id: >
-                            {% set all_lights = states.light | map(attribute='entity_id') | list %}
-                            {{ all_lights }}
+                          domain: light
                   - conditions:
                       - condition: template
                         value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
