Target only Hue lights for all lights off action
- Filter lights by friendly name containing 'Hue' or 'Philips'
- This prevents turning off status lights on other devices like Reolink cameras
- More targeted approach for the long press action

--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -239,7 +239,12 @@ action:
                 sequence:
                   - service: light.turn_off
                     target:
-                      domain: light
+                      entity_id: >
+                        {% set hue_lights = states.light | selectattr('attributes.friendly_name', 'search', 'Hue') | map(attribute='entity_id') | list %}
+                        {% if hue_lights | length == 0 %}
+                          {% set hue_lights = states.light | selectattr('attributes.friendly_name', 'search', 'Philips') | map(attribute='entity_id') | list %}
+                        {% endif %}
+                        {{ hue_lights }}
               - conditions:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
