Use is_hue_group attribute to target only Hue lights
- Use attributes.is_hue_group to filter lights instead of friendly name
- This is more reliable and targets only Philips Hue lights
- Prevents turning off status lights on other devices

--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -240,10 +240,7 @@ action:
                   - service: light.turn_off
                     target:
                       entity_id: >
-                        {% set hue_lights = states.light | selectattr('attributes.friendly_name', 'search', 'Hue') | map(attribute='entity_id') | list %}
-                        {% if hue_lights | length == 0 %}
-                          {% set hue_lights = states.light | selectattr('attributes.friendly_name', 'search', 'Philips') | map(attribute='entity_id') | list %}
-                        {% endif %}
+                        {% set hue_lights = states.light | selectattr('attributes.is_hue_group', 'eq', true) | map(attribute='entity_id') | list %}
                         {{ hue_lights }}
               - conditions:
                   - condition: template
