Target both Hue groups and individual Hue lights
- Include both is_hue_group (groups) and hue_type (individual lights)
- This should target all Hue lights including bedroom and bathroom
- More comprehensive targeting for the long press action

--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -240,7 +240,9 @@ action:
                   - service: light.turn_off
                     target:
                       entity_id: >
-                        {% set hue_lights = states.light | selectattr('attributes.is_hue_group', 'eq', true) | map(attribute='entity_id') | list %}
+                        {% set hue_groups = states.light | selectattr('attributes.is_hue_group', 'eq', true) | map(attribute='entity_id') | list %}
+                        {% set hue_individual = states.light | selectattr('attributes.hue_type', 'defined') | map(attribute='entity_id') | list %}
+                        {% set hue_lights = hue_groups + hue_individual %}
                         {{ hue_lights }}
               - conditions:
                   - condition: template
