--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -256,7 +256,7 @@ action:
       # Button 2: Brightness up
       - conditions:
           - condition: template
-            value_template: "{{ trigger.event.data.type == 'short_release' and trigger.event.data.subtype == 2 }}"
+            value_template: "{{ trigger.event.data.type == 'initial_press' and trigger.event.data.subtype == 2 }}"
           - condition: template
             value_template: "{{ button_2_brightness_up }}"
         sequence:
