--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -511,9 +511,7 @@ data:
                       - service: light.turn_off
                         target:
                           entity_id: >
-                            {% set hue_groups = states.light | selectattr('attributes.is_hue_group', 'eq', true) | map(attribute='entity_id') | list %}
-                            {% set hue_individual = states.light | selectattr('attributes.hue_type', 'defined') | map(attribute='entity_id') | list %}
-                            {% set hue_lights = hue_groups + hue_individual %}
+                            {% set hue_lights = states.light | selectattr('attributes.is_hue_group', 'eq', true) | map(attribute='entity_id') | list %}
                             {{ hue_lights }}
                   - conditions:
                       - condition: template
@@ -527,7 +525,7 @@ data:
           # Button 2: Brightness up
           - conditions:
               - condition: template
-                value_template: "{{ trigger.event.data.type == 'short_release' and trigger.event.data.subtype == 2 }}"
+                value_template: "{{ trigger.event.data.type == 'initial_press' and trigger.event.data.subtype == 2 }}"
               - condition: template
                 value_template: "{{ button_2_brightness_up }}"
             sequence:
