Try homeassistant.turn_off instead of light.turn_off
- Some lights may not respond to light.turn_off service
- homeassistant.turn_off is more universal and should work on all entities
- This should fix bedroom and bathroom lights not turning off

--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -237,7 +237,7 @@ action:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'all_lights_off' }}"
                 sequence:
-                  - service: light.turn_off
+                  - service: homeassistant.turn_off
                     target:
                       entity_id: >
                         {% set hue_lights = states.light | selectattr('attributes.is_hue_group', 'eq', true) | map(attribute='entity_id') | list %}
