Add delays between individual light turn off calls
- Use repeat loop to turn off each Hue light individually
- Add 0.1s delay between each light turn off
- This should help Hue lights process the commands properly
- May fix bedroom and bathroom lights not turning off

--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -237,11 +237,15 @@ action:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'all_lights_off' }}"
                 sequence:
-                  - service: light.turn_off
-                    target:
-                      entity_id: >
+                  - repeat:
+                      for_each: >
                         {% set hue_lights = states.light | selectattr('attributes.is_hue_group', 'eq', true) | map(attribute='entity_id') | list %}
                         {{ hue_lights }}
+                      sequence:
+                        - service: light.turn_off
+                          target:
+                            entity_id: "{{ repeat.item }}"
+                        - delay: 0.1
               - conditions:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
