--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_switch_control.yaml
@@ -237,15 +237,9 @@ action:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'all_lights_off' }}"
                 sequence:
-                  - repeat:
-                      for_each: >
-                        {% set hue_lights = states.light | selectattr('attributes.is_hue_group', 'eq', true) | map(attribute='entity_id') | list %}
-                        {{ hue_lights }}
-                      sequence:
-                        - service: light.turn_off
-                          target:
-                            entity_id: "{{ repeat.item }}"
-                        - delay: 0.1
+                  - service: light.turn_off
+                    target:
+                      entity_id: light.home
               - conditions:
                   - condition: template
                     value_template: "{{ button_1_long_action == 'custom_service' and custom_service != '' }}"
