--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -488,7 +488,7 @@ data:
           # Button 1: Toggle lights (short press)
           - conditions:
               - condition: template
-                value_template: "{{ trigger.event.data.type == 'short_release' and trigger.event.data.subtype == 1 }}"
+                value_template: "{{ trigger.event.data.type == 'initial_press' and trigger.event.data.subtype == 1 }}"
               - condition: template
                 value_template: "{{ button_1_toggle }}"
             sequence:
