--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -222,9 +222,121 @@ data:
             importance: low
             sticky: true
 
+  bathroom_switch_control.yaml: |
+    alias: Bathroom Switch Control
+    id: bathroom_switch_control
+    description: Control bathroom lights with Hue switch buttons
+    use_blueprint:
+      path: _defaults/hue_switch_control.yaml
+      input:
+        target_lights:
+          - light.bathroom
+        switch_entity: event.bathroom_switch_button_1
+        button_1_toggle: true
+        button_2_brightness_up: true
+        button_3_brightness_down: true
+        button_4_custom: true
+        button_4_action: scene_cycle
+        scene_entities:
+          - scene.bathroom_nightlight
+          - scene.bathroom_relax
+          - scene.bathroom_energize
+        button_1_long_press: true
+        button_1_long_action: all_lights_off
+        button_4_long_press: true
+        button_4_long_action: room_relax_scene
+        room_relax_scene: scene.bathroom_relax
+        brightness_step: 25
+        min_brightness: 1
+        max_brightness: 255
+
+  bedroom_switch_control.yaml: |
+    alias: Bedroom Switch Control
+    id: bedroom_switch_control
+    description: Control bedroom lights with Hue switch buttons
+    use_blueprint:
+      path: _defaults/hue_switch_control.yaml
+      input:
+        target_lights:
+          - light.bedroom
+        switch_entity: event.bedroom_switch_button_1
+        button_1_toggle: true
+        button_2_brightness_up: true
+        button_3_brightness_down: true
+        button_4_custom: true
+        button_4_action: scene_cycle
+        scene_entities:
+          - scene.bedroom_nightlight
+          - scene.bedroom_relax
+          - scene.bedroom_energize
+        button_1_long_press: true
+        button_1_long_action: all_lights_off
+        button_4_long_press: true
+        button_4_long_action: room_relax_scene
+        room_relax_scene: scene.bedroom_relax
+        brightness_step: 25
+        min_brightness: 1
+        max_brightness: 255
+
+  hallway_switch_control.yaml: |
+    alias: Hallway Switch Control
+    id: hallway_switch_control
+    description: Control hallway lights with Hue switch buttons
+    use_blueprint:
+      path: _defaults/hue_switch_control.yaml
+      input:
+        target_lights:
+          - light.hallway
+        switch_entity: event.hallway_switch_button_1
+        button_1_toggle: true
+        button_2_brightness_up: true
+        button_3_brightness_down: true
+        button_4_custom: true
+        button_4_action: scene_cycle
+        scene_entities:
+          - scene.hallway_nightlight
+          - scene.hallway_relax
+          - scene.hallway_energize
+        button_1_long_press: true
+        button_1_long_action: all_lights_off
+        button_4_long_press: true
+        button_4_long_action: room_relax_scene
+        room_relax_scene: scene.hallway_relax
+        brightness_step: 25
+        min_brightness: 1
+        max_brightness: 255
+
+  kitchen_switch_control.yaml: |
+    alias: Kitchen Switch Control
+    id: kitchen_switch_control
+    description: Control kitchen lights with Hue switch buttons
+    use_blueprint:
+      path: _defaults/hue_switch_control.yaml
+      input:
+        target_lights:
+          - light.kitchen
+        switch_entity: event.kitchen_switch_button_1
+        button_1_toggle: true
+        button_2_brightness_up: true
+        button_3_brightness_down: true
+        button_4_custom: true
+        button_4_action: scene_cycle
+        scene_entities:
+          - scene.kitchen_nightlight
+          - scene.kitchen_relax
+          - scene.kitchen_energize
+        button_1_long_press: true
+        button_1_long_action: all_lights_off
+        button_4_long_press: true
+        button_4_long_action: room_relax_scene
+        room_relax_scene: scene.kitchen_relax
+        brightness_step: 25
+        min_brightness: 1
+        max_brightness: 255
+
   living_room_switch_control.yaml: |
-    alias: Alex - Living Room Switch Control
-    id: alex_living_room_switch_control
+    alias: Living Room Switch Control
+    id: living_room_switch_control
     description: Control living room lights with Hue switch buttons
     use_blueprint:
       path: _defaults/hue_switch_control.yaml
