--- a/gitops/apps/home-assistant/automations/switch_control_kitchen.yaml
+++ b/gitops/apps/home-assistant/automations/switch_control_kitchen.yaml
@@ -1,4 +1,4 @@
-alias: Kitchen Switch Control
+alias: Switch Control - Kitchen
 id: kitchen_switch_control
 description: Control kitchen lights with Hue switch buttons
 use_blueprint:
