--- a/gitops/apps/home-assistant/automations/switch_control_bedroom.yaml
+++ b/gitops/apps/home-assistant/automations/switch_control_bedroom.yaml
@@ -1,4 +1,4 @@
-alias: Bedroom Switch Control
+alias: Switch Control - Bedroom
 id: bedroom_switch_control
 description: Control bedroom lights with Hue switch buttons
 use_blueprint:
