Fix night mode automation issues
- Add time-based conditions (20:00-07:00) to prevent daytime triggering
- Set transition to 0 to prevent light flash when turning on
- Update living room automation with night time settings
- Lights now come on with correct color/brightness instantly

--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -239,6 +239,8 @@ data:
           - initial_press
           - short_release
         switch_control_delay: 0.3
+        night_start_time: "20:00"
+        night_end_time: "07:00"
         color_mode: color_temp
         color_temp_mireds: 500
         transition_secs: 1.0
