Fix time condition template syntax
- Replace time condition with template condition to properly handle variables
- Support both normal time ranges (17:00-05:45) and overnight ranges
- Fixes 'Invalid time specified' error in Home Assistant

--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -199,9 +199,14 @@ data:
               false
             {% endif %}
           {% endif %}
-      - condition: time
-        after: "{{ night_start_time }}"
-        before: "{{ night_end_time }}"
+      - condition: template
+        value_template: >
+          {% set now_time = now().strftime('%H:%M') %}
+          {% if night_start_time <= night_end_time %}
+            {{ now_time >= night_start_time and now_time <= night_end_time }}
+          {% else %}
+            {{ now_time >= night_start_time or now_time <= night_end_time }}
+          {% endif %}
     
     action:
       - choose:
