--- a/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_night_light_defaults.yaml
+++ b/gitops/apps/home-assistant/blueprints/automation/homeassistant/hue_night_light_defaults.yaml
@@ -190,9 +190,14 @@ condition:
           false
         {% endif %}
       {% endif %}
-  - condition: time
-    after: "{{ night_start_time }}"
-    before: "{{ night_end_time }}"
+  - condition: template
+    value_template: >
+      {% set now_time = now().strftime('%H:%M') %}
+      {% if night_start_time <= night_end_time %}
+        {{ now_time >= night_start_time and now_time <= night_end_time }}
+      {% else %}
+        {{ now_time >= night_start_time or now_time <= night_end_time }}
+      {% endif %}
 
 action:
   - choose:
