Switch to scene mode to prevent light flicker
- Change default color_mode from color_temp to scene
- Update living room automation to use scene.living_room_nightlight
- Add scene configuration documentation
- Scenes prevent flicker by setting all light properties at once

--- a/gitops/apps/home-assistant/blueprints-configmap.yaml
+++ b/gitops/apps/home-assistant/blueprints-configmap.yaml
@@ -88,13 +88,13 @@ data:
         color_mode:
           name: Color mode
           description: "Pick 'scene' to call a Hue/HA scene (prevents flash)."
-          default: color_temp
+          default: scene
           selector:
             select:
               options:
+                - scene
                 - color_temp
                 - hs
-                - scene
     
         # Scene mode inputs
         scene_entity:
