--- a/gitops/apps/home-assistant/automations-configmap.yaml
+++ b/gitops/apps/home-assistant/automations-configmap.yaml
@@ -241,8 +241,8 @@ data:
         switch_control_delay: 0.3
         night_start_time: "17:00"
         night_end_time: "05:45"
-        color_mode: color_temp
-        color_temp_mireds: 500
+        color_mode: scene
+        scene_entity: scene.living_room_nightlight
         transition_secs: 1.0
         brightness: 30
 
