--- a/gitops/apps/home-assistant/automations/night_mode_living_room.yaml
+++ b/gitops/apps/home-assistant/automations/night_mode_living_room.yaml
@@ -16,7 +16,7 @@ use_blueprint:
     switch_control_delay: 0.3
     night_start_time: "17:00"
     night_end_time: "05:45"
-    color_mode: color_temp
-    color_temp_mireds: 500
+    color_mode: scene
+    scene_entity: scene.living_room_nightlight
     transition_secs: 1.0
     brightness: 30
