--- a/gitops/apps/home-assistant/deployment.yaml
+++ b/gitops/apps/home-assistant/deployment.yaml
@@ -90,29 +90,13 @@ spec:
 
               echo "Installing HACS from $HACS_SRC to $HACS_DST"
               
-              # Completely clean install - force remove entire custom_components directory
-              rm -rf "${CC_DIR}" 2>/dev/null || true
-              # Use find to remove stubborn files
-              find "${CC_DIR}" -type f -delete 2>/dev/null || true
-              find "${CC_DIR}" -type d -empty -delete 2>/dev/null || true
-              rm -rf "${CC_DIR}" 2>/dev/null || true
+              # Ensure custom_components exists but do not touch other integrations
               mkdir -p "${CC_DIR}"
               
-              # Copy all files and directories from source to custom_components directory
-              cp -r "${HACS_SRC}"/* "${CC_DIR}/" 2>/dev/null || true
-              
-              # Create hacs subdirectory and move files there
-              mkdir -p "${CC_DIR}/hacs"
-              # Move Python files, JSON files, and directories to hacs subdirectory
-              mv "${CC_DIR}"/*.py "${CC_DIR}/hacs/" 2>/dev/null || true
-              mv "${CC_DIR}"/*.json "${CC_DIR}/hacs/" 2>/dev/null || true
-              mv "${CC_DIR}"/*.js "${CC_DIR}/hacs/" 2>/dev/null || true
-              mv "${CC_DIR}"/hacs_frontend "${CC_DIR}/hacs/" 2>/dev/null || true
-              mv "${CC_DIR}"/utils "${CC_DIR}/hacs/" 2>/dev/null || true
-              mv "${CC_DIR}"/repositories "${CC_DIR}/hacs/" 2>/dev/null || true
-              mv "${CC_DIR}"/translations "${CC_DIR}/hacs/" 2>/dev/null || true
-              mv "${CC_DIR}"/websocket "${CC_DIR}/hacs/" 2>/dev/null || true
-              mv "${CC_DIR}"/validate "${CC_DIR}/hacs/" 2>/dev/null || true
+              # Replace only the hacs subfolder when installing/upgrading
+              rm -rf "${HACS_DST}" 2>/dev/null || true
+              mkdir -p "${HACS_DST}"
+              cp -r "${HACS_SRC}"/* "${HACS_DST}/" 2>/dev/null || true
               
               # Create version file
               if [ -f "${HACS_DST}/manifest.json" ]; then
